--- a/estilo.css
+++ b/estilo.css
@@ -1,3 +1,4 @@
+
 .titulo-principal {
   margin-bottom: 60px; /* Espacio entre el título y el borde */
   text-align: center; /* Centrar el texto en el contenedor */
@@ -36,19 +37,49 @@
   transform: rotate(-0.6deg);
 }
 
-.carousel-item img {
-  max-width: 300px; /* Mantiene el tamaño original de la imagen */
-  height: auto;
-  border-radius: 50px;
-}
+$carousel-control-color:             $white;
+$carousel-control-width:             15%;
+$carousel-control-opacity:           .5;
+$carousel-control-hover-opacity:     .9;
+$carousel-control-transition:        opacity .15s ease;
+
+$carousel-indicator-width:           30px;
+$carousel-indicator-height:          3px;
+$carousel-indicator-hit-area-height: 10px;
+$carousel-indicator-spacer:          3px;
+$carousel-indicator-opacity:         .5;
+$carousel-indicator-active-bg:       $white;
+$carousel-indicator-active-opacity:  1;
+$carousel-indicator-transition:      opacity .6s ease;
+
+$carousel-caption-width:             70%;
+$carousel-caption-color:             $white;
+$carousel-caption-padding-y:         1.25rem;
+$carousel-caption-spacer:            1.25rem;
+
+$carousel-control-icon-width:        2rem;
+
+$carousel-control-prev-icon-bg:      url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$carousel-control-color}'><path d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/></svg>");
+$carousel-control-next-icon-bg:      url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$carousel-control-color}'><path d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/></svg>");
+
+$carousel-transition-duration:       .6s;
+$carousel-transition:                transform $carousel-transition-duration ease-in-out; // Define transform transition first if using multiple transitions (e.g., `transform 2s ease, opacity .5s ease-out`)
 
 .tres {
   width: 91%;
   height: 28%;
   background-color:#f2ab47;
-  margin: auto;
-  box-shadow: 0 0 5px 5px #f2ab47;
   border-radius: 30px 25px 60px 12px;
+  grid-row-start: 1;
+  width: 600px; /* Ajustado para hacerlo más largo */
+  height: 700px; /* Ajustado para mayor longitud */
+  background-color: #833ab4;
+  margin: 20px, 80px, 20px 80px; /* Aumenta el margen inferior a 40px para más espacio con el siguiente contenedor */
+  border-radius: 9px;
+  padding: 20px; /* Top, Right, Bottom, Left - El padding inferior ahora es 10px */
+  top: 50px; /* Ajusta este valor para colocar la superposición como quieras */
+  left: 300px; /* Ajusta este valor para centrar la superposición */
+  transform: rotate(-0.6deg);
 }
 
 .col-md-6 {
@@ -58,7 +89,7 @@
 }
 
 .img-fluid {
-  max-width: 100%; /* Hace que la imagen se ajuste al ancho de su contenedor */
+  max-width: 80%; /* Hace que la imagen se ajuste al ancho de su contenedor */
   height: auto; /* Mantiene la proporción de la imagen */
 }
 .texto-1 {
@@ -71,7 +102,10 @@
   color: #040404;
   font-size: 14px; /* Tamaño de fuente */
 }
-.img-small {
-  width: 300px !important;
-  height: auto !important;
+
 }
+selector:hover {
+  /* Propiedades CSS a aplicar cuando el cursor esté sobre el elemento */
+  color: red;
+  background-color: #f0f0f0;
+  cursor: pointer;
